tests/polarity/polarity.exp
Error ------------------------------------------------------------------------------------------------------ fun.js:3:19

Cannot use `T` [1] in an input position because `T` [1] is expected to occur only in output positions.

   fun.js:3:19
   3| type ArgPos<+T> = T => void; // Error: +T in negative position
                        ^

References:
   fun.js:3:14
   3| type ArgPos<+T> = T => void; // Error: +T in negative position
                   ^ [1]


Error ------------------------------------------------------------------------------------------------------ fun.js:4:24

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.

   fun.js:4:24
   4| type FlipArgNeg<-T> = (T => void) => void; // Error: -T in positive position
                             ^

References:
   fun.js:4:18
   4| type FlipArgNeg<-T> = (T => void) => void; // Error: -T in positive position
                       ^ [1]


Error ------------------------------------------------------------------------------------------------------ fun.js:7:25

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.

   fun.js:7:25
   7| type RetNeg<-T> = () => T; // Error: -T in positive position
                              ^

References:
   fun.js:7:14
   7| type RetNeg<-T> = () => T; // Error: -T in positive position
                   ^ [1]


Error ----------------------------------------------------------------------------------------------------- fun.js:10:30

Cannot use `T` [1] in an input position because `T` [1] is expected to occur only in output positions.

   fun.js:10:30
   10| type FlipRetPos<+T> = (() => T) => void; // Error: +T in negative position
                                    ^

References:
   fun.js:10:18
   10| type FlipRetPos<+T> = (() => T) => void; // Error: +T in negative position
                        ^ [1]


Error ----------------------------------------------------------------------------------------------------- fun.js:14:24

Cannot use `T` [1] in an input position because `T` [1] is expected to occur only in output positions.

   fun.js:14:24
   14| function argPos<+T>(x: T): void {} // Error: +T in negative position
                              ^

References:
   fun.js:14:18
   14| function argPos<+T>(x: T): void {} // Error: +T in negative position
                        ^ [1]


Error ----------------------------------------------------------------------------------------------------- fun.js:15:28

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.

   fun.js:15:28
   15| function flipArgNeg<-T>(x: T => void): void {} // Error: -T in positive position
                                  ^

References:
   fun.js:15:22
   15| function flipArgNeg<-T>(x: T => void): void {} // Error: -T in positive position
                            ^ [1]


Error ----------------------------------------------------------------------------------------------------- fun.js:18:28

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.

   fun.js:18:28
   18| function retNeg<-T>(x: T): T { return x } // Error: -T in positive position
                                  ^

References:
   fun.js:18:18
   18| function retNeg<-T>(x: T): T { return x } // Error: -T in positive position
                        ^ [1]


Error ----------------------------------------------------------------------------------------------------- fun.js:21:34

Cannot use `T` [1] in an input position because `T` [1] is expected to occur only in output positions.

   fun.js:21:34
   21| function flipRetPos<+T>(x: () => T): void {} // Error: +T in negative position
                                        ^

References:
   fun.js:21:22
   21| function flipRetPos<+T>(x: () => T): void {} // Error: +T in negative position
                            ^ [1]


Error ----------------------------------------------------------------------------------------------------- fun.js:25:25

Cannot use `T` [1] in an input position because `T` [1] is expected to occur only in output positions.

   fun.js:25:25
   25| const argPos1 = <+T>(x: T): void => {} // Error: +T in negative position
                               ^

References:
   fun.js:25:19
   25| const argPos1 = <+T>(x: T): void => {} // Error: +T in negative position
                         ^ [1]


Error ----------------------------------------------------------------------------------------------------- fun.js:26:29

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.

   fun.js:26:29
   26| const flipArgNeg1 = <-T>(x: T => void): void => {} // Error: -T in positive position
                                   ^

References:
   fun.js:26:23
   26| const flipArgNeg1 = <-T>(x: T => void): void => {} // Error: -T in positive position
                             ^ [1]


Error ----------------------------------------------------------------------------------------------------- fun.js:29:29

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.

   fun.js:29:29
   29| const retNeg1 = <-T>(x: T): T => x // Error: -T in positive position
                                   ^

References:
   fun.js:29:19
   29| const retNeg1 = <-T>(x: T): T => x // Error: -T in positive position
                         ^ [1]


Error ----------------------------------------------------------------------------------------------------- fun.js:32:35

Cannot use `T` [1] in an input position because `T` [1] is expected to occur only in output positions.

   fun.js:32:35
   32| const flipRetPos1 = <+T>(x: () => T): void => {} // Error: +T in negative position
                                         ^

References:
   fun.js:32:23
   32| const flipRetPos1 = <+T>(x: () => T): void => {} // Error: +T in negative position
                             ^ [1]


Error ----------------------------------------------------------------------------------------------------- fun.js:37:17

Cannot use `T` [1] in an input position because `T` [1] is expected to occur only in output positions.

   fun.js:37:17
   37|   argPos<+T>(x: T): void {}, // Error: +T in negative position
                       ^

References:
   fun.js:37:11
   37|   argPos<+T>(x: T): void {}, // Error: +T in negative position
                 ^ [1]


Error ----------------------------------------------------------------------------------------------------- fun.js:38:21

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.

   fun.js:38:21
   38|   flipArgNeg<-T>(x: T => void): void {}, // Error: -T in positive position
                           ^

References:
   fun.js:38:15
   38|   flipArgNeg<-T>(x: T => void): void {}, // Error: -T in positive position
                     ^ [1]


Error ----------------------------------------------------------------------------------------------------- fun.js:41:21

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.

   fun.js:41:21
   41|   retNeg<-T>(x: T): T { return x }, // Error: -T in positive position
                           ^

References:
   fun.js:41:11
   41|   retNeg<-T>(x: T): T { return x }, // Error: -T in positive position
                 ^ [1]


Error ----------------------------------------------------------------------------------------------------- fun.js:44:27

Cannot use `T` [1] in an input position because `T` [1] is expected to occur only in output positions.

   fun.js:44:27
   44|   flipRetPos<+T>(x: () => T): void {} // Error: +T in negative position
                                 ^

References:
   fun.js:44:15
   44|   flipRetPos<+T>(x: () => T): void {} // Error: +T in negative position
                     ^ [1]


Error ------------------------------------------------------------------------------------------------------ obj.js:2:25

Cannot use `T` [1] in an input/output position because `T` [1] is expected to occur only in input positions.

   obj.js:2:25
   2| type FieldNeg<-T> = {x: T}; // Error: -T in neutral position
                              ^

References:
   obj.js:2:16
   2| type FieldNeg<-T> = {x: T}; // Error: -T in neutral position
                     ^ [1]


Error ------------------------------------------------------------------------------------------------------ obj.js:3:25

Cannot use `T` [1] in an input/output position because `T` [1] is expected to occur only in output positions.

   obj.js:3:25
   3| type FieldPos<+T> = {x: T}; // Error: +T in neutral position
                              ^

References:
   obj.js:3:16
   3| type FieldPos<+T> = {x: T}; // Error: +T in neutral position
                     ^ [1]


Error ------------------------------------------------------------------------------------------------------ obj.js:5:29

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.

   obj.js:5:29
   5| type PosFieldNeg<-T> = {+p: T}; // Error: -T in positive position
                                  ^

References:
   obj.js:5:19
   5| type PosFieldNeg<-T> = {+p: T}; // Error: -T in positive position
                        ^ [1]


Error ------------------------------------------------------------------------------------------------------ obj.js:8:34

Cannot use `T` [1] in an input position because `T` [1] is expected to occur only in output positions.

   obj.js:8:34
   8| type FlipPosFieldPos<+T> = ({+x: T}) => void; // Error: +T in negative position
                                       ^

References:
   obj.js:8:23
   8| type FlipPosFieldPos<+T> = ({+x: T}) => void; // Error: +T in negative position
                            ^ [1]


Error ----------------------------------------------------------------------------------------------------- obj.js:11:29

Cannot use `T` [1] in an input position because `T` [1] is expected to occur only in output positions.

   obj.js:11:29
   11| type NegFieldPos<+T> = {-p: T}; // Error: +T in negative position
                                   ^

References:
   obj.js:11:19
   11| type NegFieldPos<+T> = {-p: T}; // Error: +T in negative position
                         ^ [1]


Error ----------------------------------------------------------------------------------------------------- obj.js:12:34

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.

   obj.js:12:34
   12| type FlipNegFieldNeg<-T> = ({-x: T}) => void; // Error: -T in positive position
                                        ^

References:
   obj.js:12:23
   12| type FlipNegFieldNeg<-T> = ({-x: T}) => void; // Error: -T in positive position
                             ^ [1]


Error ----------------------------------------------------------------------------------------------------- obj.js:15:29

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.

   obj.js:15:29
   15| type GetNeg<-T> = {get p(): T}; // Error: -T in positive position
                                   ^

References:
   obj.js:15:14
   15| type GetNeg<-T> = {get p(): T}; // Error: -T in positive position
                    ^ [1]


Error ----------------------------------------------------------------------------------------------------- obj.js:19:28

Cannot use `T` [1] in an input position because `T` [1] is expected to occur only in output positions.

   obj.js:19:28
   19| type SetPos<+T> = {set p(x:T): void}; // Error: +T in negative position
                                  ^

References:
   obj.js:19:14
   19| type SetPos<+T> = {set p(x:T): void}; // Error: +T in negative position
                    ^ [1]



Found 24 errors
